--- a/SwiftEvents/Base.lproj/Main.storyboard
+++ b/SwiftEvents/Base.lproj/Main.storyboard
@@ -100,6 +100,77 @@
             </objects>
             <point key="canvasLocation" x="750" y="-320"/>
         </scene>
+        <!--Interval View Controller-->
+        <scene sceneID="343-3A-GIG">
+            <objects>
+                <viewController id="l27-Uy-uAM" customClass="IntervalViewController" customModule="SwiftEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="af8-MQ-kZ0"/>
+                        <viewControllerLayoutGuide type="bottom" id="6E6-cH-XFl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aNd-uc-lIv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ZS6-Pb-SQe">
+                                <rect key="frame" x="16" y="20" width="288" height="214"/>
+                                <subviews>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAc-JH-QMg">
+                                        <rect key="frame" x="113.5" y="0.0" width="61" height="30"/>
+                                        <state key="normal" title="1 second"/>
+                                        <connections>
+                                            <action selector="intervalButtons:" destination="l27-Uy-uAM" eventType="touchUpInside" id="LZJ-61-TvK"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uwq-27-0lj">
+                                        <rect key="frame" x="115" y="46" width="58" height="30"/>
+                                        <state key="normal" title="1 minute"/>
+                                        <connections>
+                                            <action selector="intervalButtons:" destination="l27-Uy-uAM" eventType="touchUpInside" id="HT8-ec-psw"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uGY-vh-tkP">
+                                        <rect key="frame" x="106.5" y="92" width="75" height="30"/>
+                                        <state key="normal" title="15 minutes"/>
+                                        <connections>
+                                            <action selector="intervalButtons:" destination="l27-Uy-uAM" eventType="touchUpInside" id="FUX-bx-xG9"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FTg-FX-P9u">
+                                        <rect key="frame" x="105.5" y="138" width="77" height="30"/>
+                                        <state key="normal" title="30 minutes"/>
+                                        <connections>
+                                            <action selector="intervalButtons:" destination="l27-Uy-uAM" eventType="touchUpInside" id="ZoL-18-RlX"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D0e-BF-rVl">
+                                        <rect key="frame" x="122.5" y="184" width="43" height="30"/>
+                                        <state key="normal" title="1 hour"/>
+                                        <connections>
+                                            <action selector="intervalButtons:" destination="l27-Uy-uAM" eventType="touchUpInside" id="6cY-NY-aLd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="ZS6-Pb-SQe" secondAttribute="leading" id="dsS-SS-oIo"/>
+                            <constraint firstItem="ZS6-Pb-SQe" firstAttribute="top" secondItem="af8-MQ-kZ0" secondAttribute="bottom" id="f9K-JZ-3KE"/>
+                            <constraint firstItem="6E6-cH-XFl" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ZS6-Pb-SQe" secondAttribute="bottom" constant="246" id="g27-hh-Ge9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZS6-Pb-SQe" secondAttribute="trailing" id="yBT-3o-9dr"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="8hD-yn-6ZX"/>
+                    <connections>
+                        <segue destination="JEL-Ua-26n" kind="unwind" identifier="updateIntevalWithSegue" unwindAction="updateIntervalWithSegue:" id="Gu6-64-RAd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V8V-9D-1L8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="JEL-Ua-26n" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2580" y="1249"/>
+        </scene>
         <!--Dropbox-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
@@ -251,7 +322,15 @@
                             <outlet property="delegate" destination="GId-XI-COp" id="vBF-SR-lDo"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="rB2-dQ-6XO"/>
+                    <navigationItem key="navigationItem" id="rB2-dQ-6XO">
+                        <barButtonItem key="leftBarButtonItem" title="Interval" id="VJS-C0-S1t">
+                            <connections>
+                                <segue destination="l27-Uy-uAM" kind="popoverPresentation" identifier="IntervalSegue" popoverAnchorBarButtonItem="VJS-C0-S1t" id="GpN-c4-Ews">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DmI-np-7vv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
